[gd_scene load_steps=7 format=2]

[ext_resource path="res://Deck F 1.gd" type="Script" id=1]
[ext_resource path="res://Character/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Src/NPC/NPC.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Shuttle Craft flip.png" type="Texture" id=4]
[ext_resource path="res://Sets/Deck F 2.png" type="Texture" id=5]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( -72.092, -34.756, -25.0225, -38.9251, -27.9921, 78.862, -71.8257, 131.574, -18.247, 129.204, -82.0587, 172.041, -82.5, 130.5, 151.538, 172.041, 194.253, 130.661, 194.229, 277.932, 152.917, 280.923, 194.229, 315.414, 62.8325, 316.2, 129.608, 280.293, 62.2026, 265.174, 125.199, 265.174 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 3, 2, 4 ), PoolIntArray( 5, 6, 3, 7 ), PoolIntArray( 7, 3, 4, 8 ), PoolIntArray( 7, 8, 9, 10 ), PoolIntArray( 10, 9, 11, 12 ), PoolIntArray( 13, 10, 12 ), PoolIntArray( 13, 12, 14, 15 ) ]
outlines = [ PoolVector2Array( -82.5, 130.5, -82.0587, 172.041, 151.538, 172.041, 152.917, 280.923, 129.608, 280.293, 125.199, 265.174, 62.2026, 265.174, 62.8325, 316.2, 194.229, 315.414, 194.229, 277.932, 194.253, 130.661, -18.247, 129.204, -27.9921, 78.862, -25.0225, -38.9251, -72.092, -34.756, -71.8257, 131.574 ) ]

[node name="DeckF1" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 244.418, 88.6889 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -92.7146, -358.645 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 1 )

[node name="NPC1" parent="." instance=ExtResource( 3 )]
position = Vector2( -60.8492, -21.4046 )
trigger_talk = false

[node name="NPC2" parent="." instance=ExtResource( 3 )]
position = Vector2( -45.9995, -4.0806 )
trigger_talk = false

[node name="NPC3" parent="." instance=ExtResource( 3 )]
position = Vector2( -33.9795, -27.4146 )
trigger_talk = false

[node name="End1" type="Position2D" parent="."]
position = Vector2( 87.0045, 300.436 )

[node name="End2" type="Position2D" parent="."]
position = Vector2( 101.854, 299.729 )

[node name="End3" type="Position2D" parent="."]
position = Vector2( 118.471, 298.668 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( -75.0586, 154.307 )
